# airflow-weather-api

./: .env.example  .gitignore  .gitleaksignore  Dockerfile  README.md  RECOMMENDED_STRUCTURE.md  clean_up.sh  pyproject.toml  pytest.ini  test_api.ipynb  verify_paths.py
.github/instructions/: copilot-instructions.md
aisac_airflow_data/: pytest.ini
aisac_airflow_data/tests/unit/test_dags/: __init__.py  test_wt_test_notification.py
dags/: coordinate_management_dag.py  debug_network_tools.py  hello.py  mkp_all_trino_tables_pipeline.py  tmd_weather_today.py  tmd_weather_today_v2.py  weather_forecast_custom_dag.py  weather_forecast_dag.py  weather_simplified_dag.py  wt_daily_pipeline.py  wt_forecast_10days_pipeline.py  wt_forecast_daily_pipeline.py  wt_forecast_notification_test.py  wt_test_notification.py
dags/common/: base_dag.py  dag_factory.py
dags/data_ingestion/: weather_forecast_dag.py  weather_simplified_dag.py
dags/include/weather/core/database/: manager.py
dags/include/weather/core/etl/: references_tbl.py
dags/include/weather/tasks/: connection_tasks.py
dags/marketprice/: fetch_trino_data.py  test_notebook.ipynb  transform_data.py
dags/marketprice/data/: mapping_list.csv
dags/marketprice/sql/: daily_product_prices.sql  mapping_list.sql
dags/weather/: alert_service.py  current.py  db_manage.py  forecast.py  forecast_10days.py  references_tbl.py  webhook.py
dags/weather/tests/: test_data.py
dags/weather/weather/tasks/: etl_tasks.py
docs/: coordinate_management_guide.md  weather_dags_documentation.md  weather_forecast_dag_README.md
include/config/: settings.py
include/weather/core/database/: manager.py
include/weather/core/etl/: current.py  forecast.py  references_tbl.py
include/weather/hooks/: webhook.py
k8s/: secret.yaml  setup-credentials.sh  setup.sh  values.yaml
plugins/: mapping_list.csv  mapping_list.xlsx
plugins/hooks/: event_hook.py  postgres_hook.py  s3_hook.py  trino_hook.py
plugins/operators/: __init__.py  postgres_insert.py  weather_operator.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: setup_weather_config.py
scripts/airflow/: validate_dags.py
scripts/database/: grid_coordinates.json  weather-processing.ipynb
scripts/database/data/: coordinates.csv  districts.csv  location_geocoded.csv  provinces.csv  regions.csv  stations.csv  subdistricts.csv
scripts/database/references_tbl/manual/: create_tbl.py  func.py  geolocation.py
sql/migrations/: weather_schema.sql
src/common/config/: setting.py
src/weather/api/: client.py  models.py
src/weather/database/: models.py  operations.py
src/weather/utils/: transformations.py
tests/: conftest.py
tests/unit/test_dags/: test_wt_test_notification.py
tests/unit/test_database/: test_manager.py
tmd_ingest/: config.py
